修改了文件...

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>sparkmall0906-common</module>
         <module>sparkmall0906-mock</module>
+        <module>sparkmall0906-offline</module>
     </modules>
     <!--声明用到的框架的版本号,统一管理   此处只声明了一部分版本-->
     <properties>
