--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>sparkmall0906-common</module>
         <module>sparkmall0906-mock</module>
         <module>sparkmall0906-offline</module>
+        <module>sparkmall0906-realtime</module>
     </modules>
     <!--声明用到的框架的版本号,统一管理   此处只声明了一部分版本-->
     <properties>
